--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,3 +1,5 @@
+@import "../node_modules/bootstrap/scss/bootstrap";
+
 $font-family-sans-serif: 'Barlow Semi Condensed', sans-serif;
 
 $primary:#733fc8;
@@ -28,4 +30,7 @@ $container-max-widths: (
     background-position: 85% top;
 }
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+h6 {
+    font-family: $font-family-sans-serif;
+    font-weight: 700;
+}
